# xiaoO

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  build.sh
apps/vault/: Cargo.toml  build.rs
apps/vault/src/: key_provider.rs  key_provider_error.rs  lib.rs  sdf.rs  types.rs  whitebox.rs
apps/vault/src/hsm/: mod.rs
apps/vault/src/tee/: mod.rs  tee_impl.rs
apps/vault/src/tee/sdf/: mod.rs
apps/xiaoo-app/: Cargo.toml  README.md  build.rs
apps/xiaoo-app/src/: builtin_agent_roles.rs  daemon_config.rs  daemon_runtime.rs  lib.rs  llm_secrets.rs  lsp_support.rs  main.rs  secrets.rs
apps/xiaoo-app/src/channels/: adapter.rs  mod.rs
apps/xiaoo-app/src/channels/feishu/: channel.rs  client.rs  ingress.rs  mod.rs  types.rs  websocket.rs
apps/xiaoo-app/src/channels/telegram/: channel.rs  client.rs  mod.rs  polling.rs  (+1 more)
apps/xiaoo-app/src/cli/: config.rs  main.rs  mod.rs
apps/xiaoo-app/src/gateway/: bootstrap.rs  channel_interaction.rs  core_session_service.rs  decrypted_api_keys.rs  hosted_runtime_resolver.rs  mod.rs  pending_interaction.rs  progress_updates.rs  prompt_utils.rs  runtime_bindings.rs  runtime_factory.rs  runtime_resolver.rs  session_keys.rs  session_protocol.rs  session_record.rs  session_service.rs  session_store.rs  session_supervisor.rs  session_worker.rs  subagent_interaction.rs  turn_request.rs  turn_result.rs  workspace_prompt.rs
apps/xiaoo-app/src/httpserver/: channel_ingress.rs  channel_runtime.rs  mod.rs  rate_limit.rs  router.rs  service.rs  sse_sink.rs
apps/xiaoo-app/src/prompts/: cli_default_system_prompt.txt  default_system_prompt.txt  tui_default_system_prompt.txt
apps/xiaoo-app/src/tui/: main.rs
crates/agent-contracts/: Cargo.toml
crates/agent-contracts/src/: lib.rs
crates/agent-contracts/src/backend/: builder.rs  config.rs  contract.rs  error.rs  mod.rs
crates/agent-contracts/src/compression/: mod.rs  pipeline.rs
crates/agent-contracts/src/context/: mod.rs
crates/agent-contracts/src/events/: loop_events.rs  mod.rs  tool_events.rs
crates/agent-contracts/src/hook/: boot_builders.rs  mod.rs  registry.rs
crates/agent-contracts/src/hooker/: boot_builders.rs  hook_types.rs  registry.rs
crates/agent-contracts/src/interaction/: handle.rs  mod.rs
crates/agent-contracts/src/llm/: mod.rs  provider.rs
crates/agent-contracts/src/lsp/: mod.rs  provider.rs
crates/agent-contracts/src/runtime/: agent_context.rs  channel_file_sender.rs  mod.rs  runtime_view.rs
crates/agent-contracts/src/skill/: mod.rs  registry.rs
crates/agent-contracts/src/tool/: boot_builders.rs  call.rs  executor.rs  hooks.rs  mod.rs  registry.rs  source.rs  spec.rs  state.rs  tool_call_factory.rs
crates/agent-contracts/src/trace/: mod.rs  recorder.rs
crates/cerberus/cerberus-cli/: Cargo.toml
crates/cerberus/cerberus-cli/src/: lib.rs  main.rs
crates/cerberus/cerberus-core/: Cargo.toml  build.rs
crates/cerberus/cerberus-core/bpf/: Cargo.toml  rust-toolchain.toml
crates/cerberus/cerberus-core/src/: lib.rs
crates/compact/: Cargo.toml
crates/compact/reports/: compact-memory-e2e-report.txt
crates/compact/scripts/: run_e2e_report.sh
crates/compact/src/: compaction.rs  envelope.rs  estimator.rs  lib.rs  manager.rs  microcompact.rs  passthrough.rs  policy.rs  summary.rs
crates/core/: Cargo.toml
crates/core/src/: agent_loop.rs  error.rs  input.rs  kvcache.rs  lib.rs  loop_state.rs  outcome.rs  runtime.rs  runtime_support.rs  snapshot.rs  suspend.rs
crates/hooker/: Cargo.toml
crates/hooker/src/: lib.rs
crates/hooker/src/framework/: mod.rs
crates/hooker/src/hookers/: builder.rs  hook_point_category.rs  mod.rs
crates/llm-client/: Cargo.toml  README.md
crates/llm-client-cli/: Cargo.toml  README.md
crates/llm-client-cli/src/: cli.rs  main.rs
crates/llm-client/src/: convert.rs  error.rs  lib.rs  provider_registry.rs  resolver.rs
crates/llm-client/src/auth/: mod.rs  pool.rs  state.rs  store.rs
crates/llm-client/src/factory/: config.rs  create.rs  mod.rs  tests.rs  trace.rs  wrapper.rs
crates/llm-client/src/models/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai_family.rs
crates/llm-client/src/providers/: mod.rs  ollama.rs  openai_family.rs  zhipu.rs
crates/llm-client/src/wire_types/: format.rs  message.rs  mod.rs  request.rs  response.rs  route_info.rs  stream.rs  temperature.rs  tool.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: client.rs  host.rs  instance.rs  lib.rs  manager.rs  registry.rs  servers.rs  service.rs  types.rs
crates/memory/: Cargo.toml
crates/memory/src/: chunker.rs  durable.rs  lib.rs  manager.rs  recall.rs  session.rs  snapshot.rs  structured.rs  vector.rs
crates/memory/src/embedding/: mod.rs  noop.rs  openai.rs  provider.rs
crates/memory/src/store/: durable_store.rs  fs_json.rs  memory_store.rs  mod.rs  semantic_store.rs  session_store.rs  sqlite_store.rs
crates/operation_backend/: Cargo.toml  build.rs
crates/operation_backend/src/: builder.rs  lib.rs
crates/operation_backend/src/backends/: mod.rs
crates/prompt/: Cargo.toml
crates/prompt/src/: builder_impl.rs  compose.rs  context.rs  decision.rs  lib.rs
crates/prompt/src/prompts/: channel_context_boundary_instruction.md  channel_file_instruction.md  channel_honesty_instruction.md  channel_memory_write_instruction.md
crates/skill/: Cargo.toml
crates/skill/src/: error.rs  lib.rs
crates/skill/src/audit/: auditor.rs  mod.rs  patterns.rs  report.rs
crates/skill/src/loading/: loader.rs  md_parser.rs  mod.rs  toml_parser.rs
crates/skill/src/registry/: file_registry.rs  mod.rs  skill_entry.rs
crates/skill/src/types/: config.rs  mod.rs  skill.rs
crates/tool/: Cargo.toml
crates/tool/src/: lib.rs
crates/tool/src/framework/: mod.rs
crates/tool/src/impl/: lsp_hooks.rs  mod.rs  path_resolver.rs  reqwest_util.rs  runtime_services.rs  source_loader.rs
crates/trace/: Cargo.toml
crates/trace/src/: lib.rs
crates/trace/src/framework/: config.rs  mod.rs  recorder_builder.rs  trace_recorder.rs
crates/trace/src/moirai/: Cargo.toml
plugins/hookers/audit_agent/audit_policy_checker/: input.json.example  pyproject.toml
(+751 files in other folders)
