[package]
name = "vault"
version.workspace = true
edition.workspace = true

[features]
default = []
tee_sdf = []

[dependencies]
reqwest = { workspace = true, features = ["json", "blocking"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
base64.workspace = true
aes-gcm.workspace = true
rand.workspace = true
tokio = { workspace = true, features = ["rt"] }
async-trait.workspace = true
hex.workspace = true
libloading = "0.8"

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
cc = "1.0"