[package]
name = "hooker"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
plugin_hook = []

[dependencies]
agent-contracts = { path = "../agent-contracts" }
agent-types = { path = "../agent-types" }
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
