[package]
name = "memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
sqlite = ["dep:rusqlite", "dep:sha2", "dep:hex", "dep:parking_lot", "dep:reqwest"]

[dependencies]
agent-contracts = { path = "../agent-contracts" }
agent-types = { path = "../agent-types" }
agent-llm = { path = "../agent-llm" }
llm-client = { path = "../llm-client" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }

# Optional deps for sqlite feature
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
parking_lot = { version = "0.12", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[dev-dependencies]
tempfile.workspace = true
