[package]
name = "operation_backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-contracts = { path = "../agent-contracts" }
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true

[[bin]]
name = "xiaoo-backend-cli"
path = "src/bin/backend_cli.rs"
