[package]
name = "operation_backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-contracts = { path = "../agent-contracts" }
async-trait.workspace = true
glob = "0.3"
regex = "1"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "net", "process", "rt", "time"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
uuid.workspace = true

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"

[[bin]]
name = "xiaoo-backend-cli"
path = "src/bin/backend_cli.rs"
