[package]
name = "prompt"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
agent-contracts = { path = "../agent-contracts" }
agent-types = { path = "../agent-types" }
agent-llm = { path = "../agent-llm" }
async-trait = "0.1"
serde_json = "1.0"

[dev-dependencies]
futures = "0.3"
