[package]
name = "tool"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
tool-cli = []

[dependencies]
hooker = { path = "../hooker" }
agent-contracts = { path = "../agent-contracts" }
agent-types = { path = "../agent-types" }
subagent = { path = "../subagent" }
trace = { path = "../trace" }
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "process", "sync", "time", "rt"] }
uuid.workspace = true
glob = "0.3.3"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
lopdf = "0.35"
similar = "2.7"
html2text = "0.16.7"
htmd = "0.5.4"
reqwest = { workspace = true, features = ["stream"] }

[[bin]]
name = "tool-cli"
path = "src/bin/tool-cli.rs"
required-features = ["tool-cli"]
