[package]
name = "cerberus-cli"
version.workspace = true
edition.workspace = true
description = "Cerberus CLI - command-line interface for secure execution"

[lib]
name = "cerberus_cli"
path = "src/lib.rs"

[[bin]]
name = "cerberus"
path = "src/main.rs"

[dependencies]
cerberus-core.workspace = true
clap.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
dirs.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile.workspace = true
