[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audit-policy-checker"
version = "0.1.0"
description = "Agent 动作审计工具 — 基于 LLM 生成最小权限策略并判定动作合规性"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AuditAgent Team"}
]
dependencies = [
    "openai>=1.0",
    "httpx>=0.25",
    "tomli>=2.0;python_version<'3.11'",
    "pydantic>=2.0",
    "tenacity>=8.0",
    "loguru>=0.7",
]

[project.scripts]
auditagent = "audit_policy_checker.cli:main"

[tool.setuptools.packages.find]
include = ["audit_policy_checker*"]

[tool.setuptools.package-data]
audit_policy_checker = ["templates/*.txt", "templates/*.md", "skills/*.md", "rules/*.json"]

[tool.setuptools.exclude-package-data]
audit_policy_checker = ["config.json"]
